# studious-telegram

./: .gitignore  README.md
aeson-th-generics/generics/: Main.hs  stack.yaml
aeson-th-generics/no-json/: Main.hs  aeson-th-generics.cabal
aeson-th-generics/th/: Main.hs  aeson-th-generics.cabal
cabal-new-build/: .gitignore  README.md  cabal-new-build.cabal  cabal.project  package.yaml
cabal-new-build/app/: DevelMain.hs  devel.hs
cabal-new-build/config/: keter.yml  settings.yml  test-settings.yml
cabal-sandbox/: .gitignore  Makefile  README.md  cabal-sandbox.cabal  package.yaml
cabal-sandbox/app/: DevelMain.hs  devel.hs
cabal-sandbox/config/: keter.yml  settings.yml  test-settings.yml
cabal2nix/: .gitignore  Makefile  README.md  package.yaml
cabal2nix/app/: DevelMain.hs  devel.hs
cabal2nix/config/: keter.yml  settings.yml  test-settings.yml
lens-th/manual/: Main.hs  lens-th.cabal
lens-th/no-lenses/: Main.hs  lens-th.cabal
lens-th/th/: Main.hs
make/: .gitignore  Makefile  README.md  default.nix
make/app/: DevelMain.hs  Main.hs  devel.hs
make/config/: keter.yml  settings.yml  test-settings.yml
servant/flat/: Main.hs
servant/flat-1/: Main.hs
servant/flat-128/: Main.hs
servant/flat-16/: Main.hs
servant/flat-2/: Main.hs
servant/flat-32/: Main.hs  servant-bench.cabal
servant/flat-4/: Main.hs
servant/flat-64/: servant-bench.cabal
servant/flat-8/: Main.hs
servant/lifted/: Main.hs
servant/modules/: servant-bench.cabal
servant/nested/: Main.hs
stack/: .gitignore  README.md  package.yaml  stack.yaml
stack/app/: DevelMain.hs  (+1 more)
(+12 files in other folders)
