name:                aeson-th-generics
version:             0.1.0.0
synopsis:            compare build times generating JSON instanecs with TH & GHC Generics
-- description:
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable aeson-th-generics
    main-is: Main.hs
    ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-incomplete-patterns
    build-depends: base, text, bytestring, aeson
    default-language:    Haskell2010
